--- a/.github/workflows/mcbbs_modpack_period.yml
+++ b/.github/workflows/mcbbs_modpack_period.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: 1.8
 
       - name: Run DateImage
-        run: sudo java -jar ${GITHUB_WORKSPACE}/mcbbs_modpack_period.jar
+        run: sudo java -jar ${GITHUB_WORKSPACE}/mcbbs_modpack_period/DateImage.jar
 
       - name: Commit processor changes
         uses: EndBug/add-and-commit@v7
