--- a/.github/workflows/mcbbs_modpack_period.yml
+++ b/.github/workflows/mcbbs_modpack_period.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Install Chinese Language Pack
+        run: | 
+          sudo apt-get install language-pack-zh-han*
+          sudo apt-get install language-pack-gnome-zh-han*
+          sudo apt-get install language-pack-kde-zh-han*
+
       - name: Run DateImage
         run: sudo java -jar ${GITHUB_WORKSPACE}/mcbbs_modpack_period/DateImage.jar
 
