--- a/.github/workflows/mcbbs_modpack_period.yml
+++ b/.github/workflows/mcbbs_modpack_period.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Delete Previous Image
+        run: sudo rm mcbbs_modpack_period.png
+
       - name: Install Chinese Language Pack
         run: | 
           sudo apt-get install language-pack-zh-han*
