--- a/.github/workflows/mcbbs_modpack_period.yml
+++ b/.github/workflows/mcbbs_modpack_period.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           sudo apt-get install fontconfig
           sudo wget https://github.com/adobe-fonts/source-han-sans/releases/download/2.004R/SourceHanSansCN.zip -O ${GITHUB_WORKSPACE}/SourceHanSansCN.zip
-          sudo unzip -o ${GITHUB_WORKSPACE}/font/SourceHanSansCN.zip -d ${GITHUB_WORKSPACE}/SourceHanSans/
+          sudo unzip -o ${GITHUB_WORKSPACE}/SourceHanSansCN.zip -d ${GITHUB_WORKSPACE}/SourceHanSans/
           sudo mv -f ${GITHUB_WORKSPACE}/SourceHanSans/SubsetOTF/CN/* /usr/share/fonts/chinese/opentype
           sudo fc-cache -fv
 
